cambios en los archivos Dao y service para una optimizacion del codigo